# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @author  Michael Hucka <mhucka@caltech.edu>
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/bun
# =============================================================================

[metadata]
name          = bun
version       = 0.0.8
description   = A Python package for a basic CLI and GUI user interface
author        = Michael Hucka
author_email  = mhucka@caltech.edu
license       = BSD 3-clause
license_files = LICENSE
url           = https://github.com/caltechlibrary/bun
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/caltechlibrary/bun
  Bug Tracker = https://github.com/caltechlibrary/bun/issues
keywords      = Python, utilities, CLI, GUI, user interfaces
classifiers   =
  Development Status :: 4 - Beta
  License :: OSI Approved :: BSD License
  Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Topic :: Software Development :: User Interfaces
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.6
